--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=bank
 server.port=8080
 
 # datasource
-spring.datasource.url = jdbc:mysql://localhost:3306/bank?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/bank?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username= root
 spring.datasource.password= 123456
 
