--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.graphql.graphiql.enabled=true
 
 #show all the log from API responses (Optional)
 spring.mvc.log-resolved-exception=true
+
+logging.level.root=WARN
