added cookie added unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,4 @@ spring.graphql.graphiql.enabled=true
 #show all the log from API responses (Optional)
 spring.mvc.log-resolved-exception=true
 
-logging.level.root=WARN
+logging.level.root=INFO
